--- a/Fortran_Version/README
+++ b/Fortran_Version/README
@@ -4,4 +4,5 @@ set initial conditions in file "input"; units are M_Sun, AU, G=1
 compile: gfortran -o LKspin LKspin.f
 output vectors are in "out.dat"
 
-The code is free to use, provided that Antonini et al. (https://arxiv.org/abs/1711.07142) and Rodriguez and Antonini are cited.
+The code is free to use, provided that Antonini et al. (2017, https://arxiv.org/abs/1711.07142) 
+and Rodriguez and Antonini (2018, https://arxiv.org/abs/1805.08212) are cited.
